# council-of-elders

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
council/app/: bootstrap.py  config.py
council/domain/: best_r1.py  convergence.py  debate_analytics.py  debate_policy.py  debate_service.py  diversity.py  draft_analysis.py  elder_migration.py  events.py  models.py  ports.py  preference.py  prompting.py  questions.py  reporting.py  roster.py  rules.py  run_summary.py  synthesis_output.py  synthesis_validation.py  validation.py
docs/: USAGE.md
docs/experiments/: 2026-04-19-9288-homogenisation.md  2026-04-20-226f-ablation.md  2026-04-20-226f-results.md  2026-04-20-f294-diversity-split.md  2026-04-20-f294-predictions.md  2026-04-20-f294-results.md  2026-04-20-judge-replication.md  2026-04-21-f13d-best-of-n.md  2026-04-21-f13d-format-ablation.md
scripts/: ablation.py  best_of_n.py  diversity_split.py  format_ablation.py  homogenisation_corpus.json  homogenisation_probe.py  judge_replication.py
tests/contract/: test_elder_port_contract.py
tests/e2e/: conftest.py  test_council_view_layout.py  test_elder_pane_widget.py  test_headless_best_r1_baseline.py  test_headless_flow.py  test_headless_low_diversity_warning.py  test_headless_risk_note.py  test_headless_run_summary.py  test_homogenisation_probe.py  test_tui_debate_report.py  test_tui_draft_analysis.py  test_tui_elder_questions.py  test_tui_full_debate.py  test_tui_health_check_gate.py  test_tui_history_per_elder.py  test_tui_layout_toggle.py  test_tui_r1_only_default.py  (+2 more)
(+119 files in other folders)
