[project]
name = "council-of-elders"
version = "0.1.0"
description = "A TUI that orchestrates a debate across Claude, Gemini, and ChatGPT using their vendor CLIs."
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "textual>=0.85",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
council = "council.app.tui.app:main"
council-headless = "council.app.headless.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["council"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: requires real vendor CLIs to be installed and authenticated",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py312"
